open-policy-agent/monitoring-observability/log-profile-validation/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8slogprofile
  annotations:
    description: Varify that the log level is set to one of the profile options in the input
spec:
  crd:
    spec:
      names:
        kind: K8sLogProfile
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package K8sLogProfile
        # violation[{"msg": msg}] {
        #   input.review.kind.kind == "APIServer"
          
        #   mustProfiles := input.parameters.mustProfiles
        #   currentProfile := input.review.object.spec.audit.profile
          
        #   not currentProfile
        #   not contains(mustProfiles, currentProfile)
          
        #   msg := sprintf("Log profile must be set to one of: %v", [mustProfiles])
        # }
        
        # contains(array, elemant) {
        # array[_] = elemant
        # }
        
        violation[{"msg": msg}] {
          #re_match("^(security.openshift.io)/", input.review.object.apiVersion)
          1==1
          msg := "test"
        }
